--- a/AI_Phishing_Detection_and_Alert-System/frontend/manifest.json
+++ b/AI_Phishing_Detection_and_Alert-System/frontend/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "PhishSleuth",
+  "name": "Phishing-Detect",
   "version": "1.1.0",
   "description": "A phishing detector plugin",
   "icons": {
